--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <meta name="theme-color" content="#0a0e1a">
     <meta name="format-detection" content="telephone=no">
     <title>Guerra de Capitales</title>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-388L84LGMZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-388L84LGMZ');
+    </script>
+    
     <style>
 /* Reset básico */
 * {
